--- a/package.json
+++ b/package.json
@@ -8,7 +8,11 @@
   },
   "scripts": {
     "ng": "ng",
-    "start": "ng serve"
+    "start": "ng serve",
+    "pageObjects-chrome": "npx playwright test usePageObjects.spec.ts --project=chromium",
+    "pageObjects-firefox": "npx playwright test usePageObjects.spec.ts --project=firefox",
+    "pageObjects-all": "npm run pageObjects-chrome && npm run pageObjects-firefox",
+    "pageObjects-all_paralell": "npm run pageObjects-chrome & npm run pageObjects-firefox"
   },
   "overrides": {
     "stylus": "github:stylus/stylus#0.54.5"
@@ -61,6 +65,7 @@
     "@angular/compiler-cli": "^14.2.12",
     "@angular/language-service": "14.2.12",
     "@compodoc/compodoc": "^1.1.19",
+    "@faker-js/faker": "^9.9.0",
     "@fortawesome/fontawesome-free": "^5.2.0",
     "@playwright/test": "^1.54.2",
     "@types/leaflet": "1.2.3",
