--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "conventional-changelog-cli": "^2.2.2",
     "dotenv": "^17.2.1",
     "npm-run-all": "4.0.2",
+    "playwright": "^1.55.0",
     "rimraf": "2.6.1",
     "stylelint": "^15.6.0",
     "ts-node": "3.2.2",
